--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,16 @@ table{
   width: 100%;
   padding: 0 50px;
 }
+
+
+.app_main_paginationBody{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+}
+
+.app_main_paginationBody div{
+  margin: 0 5px;
+}
