WIP creating feature to change display mode (list/blocks)

--- a/src/componentes/BookListItem/style.css
+++ b/src/componentes/BookListItem/style.css
@@ -12,4 +12,10 @@
 
 .app_booklist_container{
     margin: 20px 0;
+    justify-self: center;
+    align-self: center;
+}
+
+.app_booklist_container{
+    width: 100%;
 }
