--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,10 @@ table{
 .app_main_paginationBody div{
   margin: 0 5px;
 }
+
+.displayBlocks{
+  display: flex;
+  flex-wrap: wrap;
+  flex: 50%;
+}
+
